// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ics matches ics file content with all fields 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
CALSCALE:GREGORIAN
PRODID:inspirehep/seminars
BEGIN:VEVENT
DTSTART:20200515T113400Z
DTEND:20200515T173400Z
UID:inspirehep-seminar-12345
SUMMARY:Harun Urhan  et al.  — Seminar Title
URL:http://localhost/seminars/12345
DESCRIPTION:This is a test seminar
CATEGORIES:Accelerators,Experiment-HEP
LOCATION:CERN
END:VEVENT
END:VCALENDAR"
`;

exports[`ics matches ics file content with only required fields 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
CALSCALE:GREGORIAN
PRODID:inspirehep/seminars
BEGIN:VEVENT
DTSTART:20200515T114500Z
DTEND:20200517T004500Z
UID:inspirehep-seminar-12345
SUMMARY:Harun Urhan  — Seminar Title
URL:http://localhost/seminars/12345
END:VEVENT
END:VCALENDAR"
`;
